[package]
name = "gse_agent1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
regex = "1.5.6"
chrono = "0.4.19"
tokio = { version = "1", features = ["full", "macros"] }
lazy_static = "1.4.0"
reqwest = { version = "0.11.10", features = ["json", "blocking", "stream"] }
http = "0.2.8"